fixes word-wrap issue

--- a/components/StatRow.module.scss
+++ b/components/StatRow.module.scss
@@ -22,4 +22,6 @@
   min-width: 10%;
   width: 100%;
   padding: 8px 16px 8px 16px;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
 }
